update gradle and clean up some methods reported by checkstyle